# All changes to data.tree are documented here.

## Version 0.7.6 (NEXT)
- IMPROVE: plot now also works for trees with a single root node (thx to Pierre Neuvial)
- IMPROVE: ellipsis parameters are not passed to DiagrammeR for plotting (#109)
- FIX: Dependency on DiagrammeR (>= 1.0.0) explicitly stated (#111)

## Version 0.7.5
- IMPROVE: namesNotUnique parameter in as.Node.phylo (#106)
- FIX: fixed incompatibility issue with DiagrammeR (#110)

## Version 0.7.4
- IMPROVE: print now has an explicit arg pruneFun
- FIX: partykit tests now pass
- FIX: DESCRIPTION now in line with latest changes from CRAN (rmarkdown declared)
- FIX: Skipped tests in testMethods included

## Version 0.7.3
- FIX: Various typos in documentation

## Version 0.7.2
Upgrade to R 3.4.x and newest package versions.
- FIX: plot: global graph attributes now work (#88)
- FIX: typo in vignette data.tree vignette('applications', package = "data.tree")
- FIX: warnings in as.dendrogram
- FIX: warnings in sample code for Do
- FIX: as.data.frame created warnings for values that were of length 0

## Version 0.7.0
- ADD: ToDiagrammeRGraph to convert to a DiagrammeR graph object
- REMOVE: ToGraphViz (replaced with ToDiagrammeRGraph, to support the latest features in the DiagrammeR package). You can still get the dot representation by using DiagrammeR::generate_dot(ToDiagrammeRGraph(node))
- CHANGE: plot.Node 's last parameter is now 'graph', and not 'engine' anymore.
- FIX: minor typos fixed

## Version 0.6.2
- ADD: new Distance function to measure distance from one Node to another in the same tree

## Version 0.6.1
- IMPROVE: FromListSimple now accepts subclasses of lists (#79)
- IMPROVE: FromDataFrameTable now supports tibbles (#89)
- IMPROVE: print.Node and as.data.frame.Node now also work for node fields with length > 1 (#81)
- FIX: print.Node and as.data.frame.Node now also work if some Nodes have the same name as some fileds (#82)